Modify receiving suggestions and defining constant